--- a/src/App.css
+++ b/src/App.css
@@ -129,12 +129,18 @@ h4 {
     font-weight: 500;
 }
 
-.dropdown {
+.header-user-dropdown-container {
+    position: relative;
+}
+
+.header-dropdown {
     position: absolute;
-    border: 1px solid rgb(29, 34, 41);
+    border: 1px solid rgb(48, 54, 61);
+    border-radius: 0.25em;
     background-color: rgb(22, 27, 34);
-    list-style: none;
-    padding: 0.5em;
+    padding: 0.5em 0;
+    width: 180px;
+    right: 0;
 }
 
 .default-dropdown {
@@ -152,21 +158,13 @@ h4 {
 .default-dropdown-item {
     display: block;
     width: 100%;
-    padding: 0.25em;
+    padding: 0.25em 0.5em;
     text-decoration: none;
     color: lightgray;
 }
 
 .default-dropdown-item:hover {
     background-color: #2f56d6;
-}
-
-.dropdown-item {
-    display: block;
-    font-size: 0.85rem;
-    color: var(--default-text-color);
-    text-decoration: none;
-    padding: 0.25em 0;
 }
 
 .dropdown-btn {
@@ -345,7 +343,6 @@ h4 {
 }
 
 .repo-item:hover,
-.dropdown-item:hover,
 .repo-list-link:hover {
     text-decoration: underline;
 }
@@ -395,8 +392,11 @@ h4 {
 }
 
 .create-repo-input > input,
-.create-repo-input > textarea {
+.create-repo-input > textarea,
+.form-group > input,
+.form-group > textarea {
     border: 1px solid rgb(29, 34, 41);
+    border-radius: 0.2em;
     background-color: rgb(1, 4, 9);
     padding: 0.5em;
     resize: none;
@@ -515,4 +515,35 @@ h4 {
 .upload-file-container {
     border: 1px solid rgb(48, 54, 61);
     margin: 0 auto;
+}
+
+.profile-settings-sidebar {
+    width: 20%;
+}
+
+.profile-settings-content {
+    display: grid;
+    grid-template-columns: 60% auto;
+    width: 100%;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+}
+
+.profile-settings-page {
+    margin: 0 auto;
+    padding: 1em;
+    max-width: 1300px;
+    gap: 3em;
+}
+
+.account-settings-sidebar > .border-divider > a {
+    color: rgb(201, 209, 217);
+    text-decoration: none;
+}
+
+.account-settings-sidebar > .border-divider > a:hover {
+    background-color: rgb(34, 40, 46);
 }
